Fix graph overflow sort of
I think this may be a much deeper issue regarding
the amplitude being too great, but for now
let's just make sure the graph doesn't
overflow.

--- a/src/editor/theme.css
+++ b/src/editor/theme.css
@@ -64,5 +64,6 @@ knob .track {
 		background-color: #080808;
 		left:5px;
 		right:5px;
+		overflow:hidden;
 
 }
